wrapped up the about page content, need to fix links, figure out phone number, etc.

--- a/assets/stylesheets/sass/custom.sass
+++ b/assets/stylesheets/sass/custom.sass
@@ -32,6 +32,7 @@ h1
 	&:focus,
 	&:active,
 		color: #f45353
+		text-decoration: none
 
 h2
 	font-size: 37px
@@ -77,10 +78,19 @@ p.about
 	color: #aaa
 
 .footer 
+	margin-top: 10em
 	ul
 		list-style-type: none
 	li
 		display: inline
+		margin: 0 1.5em
+		text-decoration: none
+		color: #f45353
+		font-family: 'Montserrat', sans-serif
+		&:hover,
+		&:focus,
+		&:active,
+			text-decoration: none
 
 /* End Footer Items */
 
@@ -151,3 +161,18 @@ p.list-head
 	background-repeat: no-repeat
 	text-indent: -5000px
 	background-image: url("http://content.designbyagent.com/wp-content/uploads/2014/05/sc-map-places-shadow.jpg")
+
+/* End Map Section */
+
+/* Start Contact Section */
+
+#contact
+	p.reach
+		margin-top: 2em
+	p.about#email
+		color: #ADADAD
+	p.about#phone
+		color: #ADADAD
+
+
+/* End Contact Section */
